<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.void_3.fourchess.FourChess"
    android:id="@+id/game_page"
    android:background="@drawable/starton">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/game_back"
        android:background="#00000000"
        android:contentDescription="@string/gameback"
        android:scaleType="centerCrop"
        android:src="@drawable/pic05" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bluebar"
        android:baselineAligned="false"
        android:paddingLeft="@dimen/radius"
        android:paddingRight="@dimen/radius"
        android:paddingBottom="@dimen/radius"
        android:layout_below="@+id/chess_board"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/blueshow"
                android:textSize="18sp"
                android:shadowColor="#7e000000"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2"
                android:layout_weight="1"
                android:singleLine="true"
                android:gravity="center"
                android:textColor="#ff00ff28" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/blueyes"
                    android:layout_weight="1"
                    android:background="@drawable/game_set"
                    android:onClick="BlueAgreeRetract"
                    android:textColor="#ff0076ff"
                    android:textSize="18sp"
                    android:singleLine="true"
                    android:layout_margin="3dp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/blueno"
                    android:layout_weight="1"
                    android:background="@drawable/paly_chess"
                    android:onClick="RejectRetract"
                    android:textColor="#ffffaa3e"
                    android:textSize="18sp"
                    android:layout_margin="3dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/retract"
                android:src="@drawable/reset"
                android:background="#00000000"
                android:scaleType="fitCenter"
                android:contentDescription="@string/retract"
                android:onClick="BlueRequest"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/redbar"
        android:baselineAligned="false"
        android:rotation="180"
        android:paddingLeft="@dimen/radius"
        android:paddingRight="@dimen/radius"
        android:paddingBottom="@dimen/radius"
        android:paddingEnd="@dimen/radius"
        android:layout_above="@+id/chess_board"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/redshow"
                android:textSize="18sp"
                android:layout_weight="1"
                android:gravity="center"
                android:singleLine="true"
                android:shadowColor="#7e000000"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2"
                android:textColor="#ff00ff28" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1" >

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/redyes"
                    android:layout_weight="1"
                    android:background="@drawable/paly_chess"
                    android:onClick="RedAgreeRetract"
                    android:textColor="#ffffaa3e"
                    android:textSize="18sp"
                    android:layout_margin="3dp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/redno"
                    android:layout_weight="1"
                    android:background="@drawable/game_set"
                    android:onClick="RejectRetract"
                    android:textColor="#ff0076ff"
                    android:textSize="18sp"
                    android:layout_margin="3dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2" >

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/restart"
                android:src="@drawable/reset"
                android:scaleType="fitCenter"
                android:background="#00000000"
                android:contentDescription="@string/restart"
                android:onClick="RedRequest" />
        </LinearLayout>
    </LinearLayout>

    <cn.void_3.fourchess.FlowRadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/chess_board"
        android:layout_centerInParent="true"
        android:background="@drawable/bigboard">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/chess00"
                android:layout_weight="1"
                style="@style/radiobutton"
                android:background="@drawable/red_chess"
                android:onClick="ChessClick"
                android:layout_margin="15dp" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/chess01"
                android:layout_weight="1"
                style="@style/radiobutton"
                android:background="@drawable/red_chess"
                android:onClick="ChessClick"
                android:layout_margin="15dp" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/chess02"
                android:layout_weight="1"
                style="@style/radiobutton"
                android:background="@drawable/red_chess"
                android:onClick="ChessClick"
                android:layout_margin="15dp" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/chess03"
                android:layout_weight="1"
                style="@style/radiobutton"
                android:background="@drawable/red_chess"
                android:onClick="ChessClick"
                android:layout_margin="15dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/chess10"
                android:layout_weight="1"
                style="@style/radiobutton"
                android:background="@drawable/red_chess"
                android:onClick="ChessClick"
                android:layout_margin="15dp" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/chess11"
                android:layout_weight="1"
                style="@style/radiobutton"
                android:background="@drawable/red_chess"
                android:onClick="ChessClick"
                android:layout_margin="15dp" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/chess12"
                android:layout_weight="1"
                style="@style/radiobutton"
                android:background="@drawable/red_chess"
                android:onClick="ChessClick"
                android:layout_margin="15dp" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/chess13"
                android:layout_weight="1"
                style="@style/radiobutton"
                android:background="@drawable/red_chess"
                android:onClick="ChessClick"
                android:layout_margin="15dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/chess20"
                android:layout_weight="1"
                style="@style/radiobutton"
                android:background="@drawable/red_chess"
                android:onClick="ChessClick"
                android:layout_margin="15dp" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/chess21"
                android:layout_weight="1"
                style="@style/radiobutton"
                android:background="@drawable/red_chess"
                android:onClick="ChessClick"
                android:layout_margin="15dp" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/chess22"
                android:layout_weight="1"
                style="@style/radiobutton"
                android:background="@drawable/red_chess"
                android:onClick="ChessClick"
                android:layout_margin="15dp" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/chess23"
                android:layout_weight="1"
                style="@style/radiobutton"
                android:background="@drawable/red_chess"
                android:onClick="ChessClick"
                android:layout_margin="15dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/chess30"
                android:layout_weight="1"
                style="@style/radiobutton"
                android:background="@drawable/red_chess"
                android:onClick="ChessClick"
                android:layout_margin="15dp" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/chess31"
                android:layout_weight="1"
                style="@style/radiobutton"
                android:background="@drawable/red_chess"
                android:onClick="ChessClick"
                android:layout_margin="15dp" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/chess32"
                android:layout_weight="1"
                style="@style/radiobutton"
                android:background="@drawable/red_chess"
                android:onClick="ChessClick"
                android:layout_margin="15dp" />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/chess33"
                android:layout_weight="1"
                style="@style/radiobutton"
                android:background="@drawable/red_chess"
                android:onClick="ChessClick"
                android:layout_margin="15dp" />
        </LinearLayout>

    </cn.void_3.fourchess.FlowRadioGroup>

</RelativeLayout>